--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,6 +15,10 @@
         background-color: #fafafa;
         color: #071822;
     }
+    code{
+        background-color: #C0C0C0 ;  
+        border-radius: 5px;
+    }
 
     .light-mode {
         background-color: #071822;
