--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -26,8 +26,8 @@
     }
 
     .highlight {
-        color: white;
-        background-color: #263238 !important;
+        color: black;
+        background-color: #C0C0C0 !important;
     }
 
     table, th, td {
